--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -409,9 +409,9 @@
 					content ""
 
 			&--yellow:before
-				background #ffba14
+				background #c31735
 			&--blue:before
-				background #0089c0
+				background #032c5a
 			&:hover, &--active
 				text-decoration none
 				color white
