--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -1312,9 +1312,9 @@ article
 					content ""
 
 			&--yellow:before
-				background #ffba14
+				background #c31735
 			&--blue:before
-				background #0089c0
+				background #032c5a
 			&:hover, &--active
 				text-decoration none
 				color white
