--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -263,7 +263,9 @@ b(name=null, position=null, color=null, size=null)
 			margin-left 20px
 	.nav
 		full-width()
+		position   relative
 		text-align justify
+		z-index    40
 		&__item
 			font-weight bold
 			text-transform uppercase
