--- a/sources/css/import/global.styl
+++ b/sources/css/import/global.styl
@@ -50,12 +50,18 @@ article
 	float right
 	margin-top 180px
 	padding-top 20px
+	position relative
 	@media (min-width: scr_xs)
 		margin-top 230px
 	@media (min-width: scr_md)
 		margin-top 295px
-	@media (min-width: scr_md)
 		max-width 509px
+		position absolute
+		left 50%
+		bottom 100px
+		margin-left -40px
+	@media (min-width: scr_lg)
+		margin-left 50px
 	.bages
 		@media (min-width: scr_sm)
 			left 2%
