--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -6,6 +6,9 @@ input:focus {
   outline: 0;
   text-decoration: none;
 }
+.no-position {
+  position: initial;
+}
 .inline-block {
   display: inline-block;
 }
@@ -1621,6 +1624,7 @@ article {
   float: right;
   margin-top: 180px;
   padding-top: 20px;
+  position: relative;
 }
 @media (min-width: 480px) {
   .index-page {
@@ -1630,11 +1634,16 @@ article {
 @media (min-width: 992px) {
   .index-page {
     margin-top: 295px;
+    max-width: 509px;
+    position: absolute;
+    left: 50%;
+    bottom: 100px;
+    margin-left: -40px;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 1200px) {
   .index-page {
-    max-width: 509px;
+    margin-left: 50px;
   }
 }
 @media (min-width: 768px) {
@@ -2925,6 +2934,9 @@ article {
   z-index: 10;
   position: relative;
 }
+.index .sidebar {
+  position: initial;
+}
 @media (min-width: 992px) {
   .index .sidebar {
     padding-bottom: 80px;
@@ -3053,6 +3065,17 @@ article {
 @media (min-width: 992px) {
   .sidebar .news {
     display: block;
+    position: absolute;
+    right: 50%;
+    bottom: 170px;
+    margin-right: 145px;
+    max-width: 324px;
+  }
+}
+@media (min-width: 1200px) {
+  .sidebar .news {
+    max-width: 354px;
+    margin-right: 205px;
   }
 }
 .index-news {
