--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -16,6 +16,9 @@ a, input
 		outline 0
 		text-decoration: none
 
+.no-position
+	position initial
+
 .inline-block
 	display inline-block
 
@@ -597,12 +600,18 @@ article
 	float right
 	margin-top 180px
 	padding-top 20px
+	position relative
 	@media (min-width: scr_xs)
 		margin-top 230px
 	@media (min-width: scr_md)
 		margin-top 295px
-	@media (min-width: scr_md)
 		max-width 509px
+		position absolute
+		left 50%
+		bottom 100px
+		margin-left -40px
+	@media (min-width: scr_lg)
+		margin-left 50px
 	.bages
 		@media (min-width: scr_sm)
 			left 2%
@@ -1440,7 +1449,8 @@ article
 	full-width()
 	z-index 10
 	position relative
-	
+	.index &
+		position initial
 	@media (min-width: scr_md)
 		.index &
 			padding-bottom 80px
@@ -1523,6 +1533,14 @@ article
 		display none
 		@media (min-width: scr_md)
 			display block
+			position absolute
+			right 50%
+			bottom 170px
+			margin-right 145px
+			max-width 324px
+		@media (min-width: scr_lg)
+			max-width 354px
+			margin-right 205px
 .index-news
 	full-width()
 	.news
