--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -760,6 +760,8 @@ article
 			right -100px
 			svg
 				max-width none
+				path
+					fill white
 	img
 		max-width 100%
 .modal-backdrop.in
@@ -1536,11 +1538,11 @@ article
 			position absolute
 			right 50%
 			bottom 170px
-			margin-right 145px
-			max-width 324px
+			margin-right 215px
+			max-width 254px
 		@media (min-width: scr_lg)
-			max-width 354px
-			margin-right 205px
+			max-width 284px
+			margin-right 275px
 .index-news
 	full-width()
 	.news
