--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -754,13 +754,13 @@ article
 		top -5px
 		svg
 			max-width 30px
-			path
+			path, g
 				fill blue
 		@media (min-width: scr_md)
 			right -100px
 			svg
 				max-width none
-				path
+				path, g
 					fill white
 	img
 		max-width 100%
