--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -1284,7 +1284,7 @@ article
 					color white
 					.news__date
 						color white
-	.filter
+	.filter, .select
 		full-width()
 		position relative
 		z-index 20
@@ -1336,6 +1336,12 @@ article
 			&--active
 				&:after
 					opacity 0
+	.select
+		padding 0
+		margin 0
+		&__item
+			margin-right: 0px
+			margin-left 10px
 	.dropdown
 		margin-left 5px
 		margin-right -10px
