--- a/sources/css/import/page.styl
+++ b/sources/css/import/page.styl
@@ -368,7 +368,7 @@
 					color white
 					.news__date
 						color white
-	.filter
+	.filter, .select
 		full-width()
 		position relative
 		z-index 20
@@ -420,6 +420,12 @@
 			&--active
 				&:after
 					opacity 0
+	.select
+		padding 0
+		margin 0
+		&__item
+			margin-right: 0px
+			margin-left 10px
 	.dropdown
 		margin-left 5px
 		margin-right -10px
