--- a/sources/css/import/global.styl
+++ b/sources/css/import/global.styl
@@ -56,11 +56,12 @@ article
 	@media (min-width: scr_md)
 		margin-top 295px
 		max-width 509px
+	@media (min-width: scr_md) and (min-height: 700px)
 		position absolute
 		left 50%
 		bottom 100px
 		margin-left -40px
-	@media (min-width: scr_lg)
+	@media (min-width: scr_lg) and (min-height: 700px)
 		margin-left 50px
 	.bages
 		@media (min-width: scr_sm)
