--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -3,6 +3,39 @@ blue2          = #00aafa
 white          = #f4f4f4
 toolbar_top    = #1f2130
 toolbar_bottom = rgba(28,28,28,.8)
+/*!
+ * Примеси
+ */
+@import "nib"
+
+full-width()
+	float left
+	width 100%
+
+middle()
+	display inline-block
+	vertical-align middle
+
+t(attr=null,time=.3s)
+	transition-property attr
+	transition-duration time
+
+b(name=null, position=null, color=null, size=null)
+	background color url(../images/name) position
+	if size
+		background-size size
+
+border-dashed(color=rgba(0,0,0,1), top=20px, size=12px)
+	background-image: linear-gradient(left, color 70%, transparent 70%)
+	background-repeat: repeat-x;
+	background-size: size 1px;
+	background-position: 0 top;
+
+border-line(color=rgba(0,0,0,1), top=20px, size=12px)
+	background-image: linear-gradient(to bottom, rgba(0,0,0,0) 50%, color 50%);
+	background-repeat: repeat-x;
+	background-size: 2px 2px;
+	background-position: 0 top;
 /*
  * Модификаторы оформления
  */
@@ -15,6 +48,11 @@ a, input
 	&:focus
 		outline 0
 		text-decoration: none
+
+a
+	t(color background-color border-radius box-shadow border-radius)
+	&:hover
+		text-decoration none
 
 .no-position
 	position initial
@@ -78,27 +116,6 @@ for vz, key in xs sm md lg
 			padding-right 0
 			padding-left 0
 
-/*!
- * Примеси
- */
-@import "nib"
-
-full-width()
-	float left
-	width 100%
-
-middle()
-	display inline-block
-	vertical-align middle
-
-t(attr=null,time=.3s)
-	transition-property attr
-	transition-duration time
-
-b(name=null, position=null, color=null, size=null)
-	background color url(../images/name) position
-	if size
-		background-size size
 @font-face
 	font-family 'Proxima'
 	src url("../fonts/ProximaNova-Bold.ttf")
@@ -225,19 +242,21 @@ b(name=null, position=null, color=null, size=null)
 		left      0px
 		top       32px
 		display   none
+		&__left	
+			svg
+				left -40px
+				@media (min-width: scr_lg)
+					left -55px
+		&__right
+			svg
+				right -14px
+				@media (min-width: scr_lg)
+					right 0
 		svg
 			position absolute
 			top 0
 			path
 				fill toolbar_top
-			&:first-of-type
-				left -40px
-				@media (min-width: scr_lg)
-					left -55px
-			&:last-of-type
-				right -14px
-				@media (min-width: scr_lg)
-					right 0
 		&:after
 			position    absolute
 			height      68px
@@ -248,6 +267,13 @@ b(name=null, position=null, color=null, size=null)
 			@media (min-width: scr_lg)
 				width  201px
 				left   15px
+		&--big-left
+			&:after
+				width 400%
+				left auto
+				right 58px
+				@media (min-width: scr_lg)
+					right 72px
 		@media (min-width: scr_md)
 			display block
 	.logo
@@ -365,8 +391,9 @@ b(name=null, position=null, color=null, size=null)
 			color        white
 			line-height  20px
 			text-decoration: underline
+			t(color)
 			&:hover
-				color blue2
+				color toolbar_top
 				text-decoration none
 	.search-trigger
 		display none
@@ -433,7 +460,7 @@ b(name=null, position=null, color=null, size=null)
 		color white
 		font-weight bold
 		&:hover
-			color #084ed0
+			color blue
 	.filials
 		svg
 			middle()
@@ -449,8 +476,7 @@ b(name=null, position=null, color=null, size=null)
 		display none
 		@media (min-width: scr_sm)
 			display inline-block
-
-	&:after
+	&:after, &:before
 		position    absolute
 		height      33px
 		width       100%
@@ -462,13 +488,16 @@ b(name=null, position=null, color=null, size=null)
 		display     none
 		@media (min-width: scr_md)
 			display block
+	&:before
+		background toolbar_bottom
+		height 91px
 	@media (min-width: scr_sm)
-		position       relative
-		background     toolbar_bottom
 		margin-bottom  15px
 	@media (min-width: scr_md)
+		position       relative
+		background     transparent
 		margin-bottom  35px
-		height         91px
+		height         100px
 		line-height    38px
 
 .search
@@ -606,11 +635,12 @@ article
 	@media (min-width: scr_md)
 		margin-top 295px
 		max-width 509px
+	@media (min-width: scr_md) and (min-height: 700px)
 		position absolute
 		left 50%
 		bottom 100px
 		margin-left -40px
-	@media (min-width: scr_lg)
+	@media (min-width: scr_lg) and (min-height: 700px)
 		margin-left 50px
 	.bages
 		@media (min-width: scr_sm)
@@ -1472,7 +1502,7 @@ article
 	.bages
 		display none
 		margin-bottom 95px
-		margin-top 90px
+		margin-top 50px
 		&__item
 			max-width 200px
 			margin-bottom 13px
@@ -1541,12 +1571,14 @@ article
 		display none
 		@media (min-width: scr_md)
 			display block
+		@media (min-width: scr_md) and (min-height: 700px)
+			display block
 			position absolute
 			right 50%
-			bottom 170px
+			bottom 140px
 			margin-right 215px
 			max-width 254px
-		@media (min-width: scr_lg)
+		@media (min-width: scr_lg) and (min-height: 700px)
 			max-width 284px
 			margin-right 275px
 .index-news
