--- a/sources/css/import/global.styl
+++ b/sources/css/import/global.styl
@@ -241,3 +241,12 @@ article
 	display none
 	@media (min-width: scr_sm)
 		display block
+
+.toolbar
+	.nav-en
+		&__item
+			@media (min-width: scr_sm)
+				padding: 3px 15.5px 0
+			@media (min-width: scr_lg)
+				padding: 3px 22.3px 0
+				letter-spacing: .3px
