--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -1013,6 +1013,48 @@ a:hover {
     background-image: url("../images/plugins/fotorama@2x.png");
   }
 }
+.pp_bottom div,
+.pp_top div,
+.pp_left,
+.pp_right {
+  background: #fff !important;
+  background-image: none !important;
+}
+div.pp_pic_holder.pp_default {
+  padding-right: 5px;
+}
+div.pp_default .pp_top .pp_left,
+div.pp_default .pp_top .pp_right,
+div.pp_default .pp_expand,
+div.pp_default .pp_expand:hover,
+div.pp_default .pp_contract,
+div.pp_default .pp_contract:hover,
+div.pp_default .pp_close,
+div.pp_default .pp_nav .pp_pause,
+div.pp_default a.pp_arrow_next,
+div.pp_default .pp_bottom .pp_left,
+div.pp_default .pp_bottom .pp_right,
+div.pp_default a.pp_arrow_previous,
+div.pp_default .pp_nav .pp_play {
+  background-image: url("../images/plugins/sprite.png");
+}
+div.pp_default .pp_top .pp_middle,
+div.pp_default .pp_bottom .pp_middle {
+  background-image: url("../images/plugins/sprite-x.png");
+}
+div.pp_default .pp_content_container .pp_left,
+div.pp_default .pp_content_container .pp_right {
+  background-image: url("../images/plugins/sprite-y.png");
+}
+div.pp_default .pp_previous:hover {
+  background-image: url("../images/plugins/sprite_prev.png");
+}
+div.pp_default .pp_next:hover {
+  background-image: url("../images/plugins/sprite_next.png");
+}
+div.pp_default .pp_loaderIcon {
+  background-image: url("../images/plugins/loader.gif");
+}
 .toolbar {
   float: left;
   width: 100%;
@@ -1023,6 +1065,7 @@ a:hover {
   position: fixed;
   background: rgba(28,28,28,0.8);
   line-height: 62px;
+  z-index: 300;
   white-space: nowrap;
   margin-bottom: 20px;
 /* Выбор сайтов холдинга */
@@ -1190,6 +1233,7 @@ a:hover {
   min-width: 260px;
   padding: 0 15px;
   font-size: 12px;
+  color: #f4f4f4;
 }
 .toolbar .lang-trigger {
   position: relative;
@@ -1970,6 +2014,17 @@ article {
 @media (min-width: 768px) {
   .no-mobile {
     display: block;
+  }
+}
+@media (min-width: 768px) {
+  .toolbar .nav-en__item {
+    padding: 3px 15.5px 0;
+  }
+}
+@media (min-width: 1200px) {
+  .toolbar .nav-en__item {
+    padding: 3px 22.3px 0;
+    letter-spacing: 0.3px;
   }
 }
 #Feedback .form {
