--- a/sources/css/import/global.styl
+++ b/sources/css/import/global.styl
@@ -243,8 +243,8 @@ article
 		display block
 
 .toolbar
-	.nav-en
-		&__item
+	.nav--en
+		.nav__item
 			@media (min-width: scr_sm)
 				padding: 3px 15.5px 0
 			@media (min-width: scr_lg)
