--- a/sources/css/import/global.styl
+++ b/sources/css/import/global.styl
@@ -245,6 +245,8 @@ article
 .toolbar
 	.nav--en
 		.nav__item
+			&:first-of-type
+				padding-left:0 !important
 			@media (min-width: scr_sm)
 				padding: 3px 15.5px 0
 			@media (min-width: scr_lg)
