--- a/sources/css/style.styl
+++ b/sources/css/style.styl
@@ -311,6 +311,11 @@ div.pp_default .pp_loaderIcon
 			max-width 240px
 			position absolute
 			top 61px
+			t all
+			&--disable
+				pointer-events none
+				opacity 0
+				top 40px
 			@media (min-width: scr_md)
 				display none
 			.logo
